# sales-report-generation

./: .gitignore  Makefile  README.md  pyproject.toml
app/: config.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: root.py
app/sales_report_log/: logger.py
app/schemas/: root.py
configs/: .secrets.toml.tmpl  logger_cfg.yaml  settings.toml
docker/: Dockerfile  docker-compose.local.yml
reqs/: curl_root.sh
requirements/: requirements.txt
