[tool.poetry]
name = "sales-report-generation"
version = "0.1.0"
description = ""
authors = ["artem.bardakov <artem.bardakov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
fastapi = "^0.92.0"
dynaconf = "^3.1.11"
uvicorn = "^0.20.0"
pyaml = "^21.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
