[tool.poetry]
name = "sales-report-generation"
version = "0.1.0"
description = ""
authors = ["artem.bardakov <artem.bardakov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
fastapi = "^0.92.0"
dynaconf = "^3.1.11"
uvicorn = "^0.20.0"
pyaml = "^21.10.1"
types-pyyaml = "^6.0.12.8"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.1"
pylint = "^2.16.2"
alembic = "^1.9.4"
coverage = "^7.2.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"
isort = "^5.12.0"
bandit = {version = "^1.7.4", extras = ["toml"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.bandit]
    [tool.bandit.assert_used]
    skips=["*/test_*.py", "*/gunicorn_conf.py"]


[tool.pylint]
    extension-pkg-whitelist = "pydantic"

    [tool.pylint."MESSAGES CONTROL"]
        confidence = ""
        disable = [
            "missing-function-docstring",
            "missing-module-docstring",
            "missing-class-docstring",
            "too-few-public-methods"
        ]